samples/_failures_safe/1761649325_3e0402_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa115bb2.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_aa115bb2.c:187:17: error: expected declaration or statement at end of input
  187 |                 graph->edges[i]->target->visited = 1;
      |                 ^~~~~
./samples/SAFE/__tmp_aa115bb2.c:187:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa115bb2.c:187:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa115bb2.c:187:17: error: expected declaration or statement at end of input
